--- a/package.json
+++ b/package.json
@@ -4,27 +4,32 @@
     "description": "Back end de la webapp developpé pour la MSPR",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "jest"
+
     },
     "author": "Léo",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.17.1",
-      "mysql": "^2.18.1",
-      "body-parser": "^1.19.0",
-      "express-session": "^1.17.1",
-      "passport": "^0.4.1",
-      "passport-local": "^1.0.0",
-      "express-mysql-session": "^2.1.4",
-      "dotenv": "^8.2.0",
-      "multer": "^1.4.2",           
-      "axios": "^0.21.1",             
-      "form-data": "^4.0.0",         
-      "fs": "0.0.1-security"  
+        "axios": "^0.21.1",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-mysql-session": "^2.1.4",
+        "express-session": "^1.17.1",
+        "form-data": "^4.0.0",
+        "fs": "0.0.1-security",
+        "multer": "^1.4.2",
+        "mysql": "^2.18.1",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0"
     },
     "devDependencies": {
-      "nodemon": "^2.0.4"
+        "jest": "^29.7.0",
+        "nodemon": "^2.0.4",
+        "supertest": "^7.0.0"
     }
-  }
+
+}
